Added notebook png and refactor errors :D.

--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -18,6 +18,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Objectives:**\n",
+    "\n",
+    "- List popular languages for Data Science\n",
+    "- List commonly used libraries in Data Science\n",
+    "- Create a table with Data Science tools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Some of the popular languages that Data Scientists use are:\n",
     "\n",
     "1. Python.\n",
